@@ -14,6 +14,7 @@
 package tech.pegasys.teku.storage.store;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static tech.pegasys.teku.infrastructure.async.SyncAsyncRunner.SYNC_RUNNER;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -25,12 +26,13 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import tech.pegasys.teku.core.ChainBuilder;
 import tech.pegasys.teku.core.lookup.BlockProvider;
+import tech.pegasys.teku.core.lookup.StateAndBlockProvider;
 import tech.pegasys.teku.datastructures.blocks.SignedBeaconBlock;
 import tech.pegasys.teku.datastructures.blocks.SignedBlockAndState;
-import tech.pegasys.teku.datastructures.state.BeaconState;
 import tech.pegasys.teku.datastructures.state.Checkpoint;
+import tech.pegasys.teku.datastructures.state.CheckpointState;
 import tech.pegasys.teku.infrastructure.async.SafeFuture;
-import tech.pegasys.teku.metrics.StubMetricsSystem;
+import tech.pegasys.teku.infrastructure.metrics.StubMetricsSystem;
 import tech.pegasys.teku.storage.api.StorageUpdateChannel;
 import tech.pegasys.teku.storage.api.StubStorageUpdateChannel;
 
@@ -44,10 +46,14 @@ public abstract class AbstractStoreTest {
     final int cacheMultiplier = 3;
 
     // Create a new store with a small cache
-    final StorePruningOptions pruningOptions =
-        StorePruningOptions.create(cacheSize, cacheSize, cacheSize);
+    final StoreConfig pruningOptions =
+        StoreConfig.builder()
+            .checkpointStateCacheSize(cacheSize)
+            .blockCacheSize(cacheSize)
+            .stateCacheSize(cacheSize)
+            .build();
 
-    final Store store = createGenesisStore(pruningOptions);
+    final UpdatableStore store = createGenesisStore(pruningOptions);
     final List<SignedBlockAndState> blocks =
         chainBuilder.generateBlocksUpToSlot(cacheMultiplier * cacheSize);
 
@@ -70,10 +76,14 @@ public abstract class AbstractStoreTest {
     final int epochsToProcess = cacheSize * 3;
 
     // Create a new store with a small cache
-    final StorePruningOptions pruningOptions =
-        StorePruningOptions.create(cacheSize, cacheSize, cacheSize);
+    final StoreConfig pruningOptions =
+        StoreConfig.builder()
+            .checkpointStateCacheSize(cacheSize)
+            .blockCacheSize(cacheSize)
+            .stateCacheSize(cacheSize)
+            .build();
 
-    final Store store = createGenesisStore(pruningOptions);
+    final UpdatableStore store = createGenesisStore(pruningOptions);
     while (chainBuilder.getLatestEpoch().longValue() < epochsToProcess) {
       SignedBlockAndState block = chainBuilder.generateNextBlock();
       addBlock(store, block);
@@ -82,8 +92,9 @@ public abstract class AbstractStoreTest {
     final List<CheckpointState> allCheckpoints = new ArrayList<>();
     for (int i = 0; i <= chainBuilder.getLatestEpoch().intValue(); i++) {
       Checkpoint checkpoint = chainBuilder.getCurrentCheckpointForEpoch(i);
-      BeaconState state = chainBuilder.getBlockAndState(checkpoint.getRoot()).get().getState();
-      allCheckpoints.add(new CheckpointState(checkpoint, state));
+      SignedBlockAndState blockAndState = chainBuilder.getBlockAndState(checkpoint.getRoot()).get();
+      allCheckpoints.add(
+          new CheckpointState(checkpoint, blockAndState.getBlock(), blockAndState.getState()));
     }
     assertThat(allCheckpoints.size()).isEqualTo(epochsToProcess + 1);
 
@@ -96,35 +107,42 @@ public abstract class AbstractStoreTest {
     allCheckpoints.forEach(c -> chainProcessor.accept(store, c));
   }
 
-  protected void addBlock(final Store store, final SignedBlockAndState block) {
+  protected void addBlock(final UpdatableStore store, final SignedBlockAndState block) {
     addBlocks(store, List.of(block));
   }
 
-  protected void addBlocks(final Store store, final List<SignedBlockAndState> blocks) {
+  protected void addBlocks(final UpdatableStore store, final List<SignedBlockAndState> blocks) {
     final UpdatableStore.StoreTransaction tx = store.startTransaction(storageUpdateChannel);
     blocks.forEach(tx::putBlockAndState);
     assertThat(tx.commit()).isCompletedWithValue(null);
   }
 
-  protected Store createGenesisStore() {
-    return createGenesisStore(StorePruningOptions.createDefault());
+  protected UpdatableStore createGenesisStore() {
+    return createGenesisStore(StoreConfig.createDefault());
   }
 
-  protected Store createGenesisStore(final StorePruningOptions pruningOptions) {
+  protected UpdatableStore createGenesisStore(final StoreConfig pruningOptions) {
     final SignedBlockAndState genesis = chainBuilder.generateGenesis();
     final Checkpoint genesisCheckpoint = chainBuilder.getCurrentCheckpointForEpoch(0);
-    return new Store(
-        new StubMetricsSystem(),
-        blockProviderFromChainBuilder(),
-        genesis.getState().getGenesis_time(),
-        genesis.getState().getGenesis_time(),
-        genesisCheckpoint,
-        genesisCheckpoint,
-        genesisCheckpoint,
-        Map.of(genesis.getRoot(), genesis.getParentRoot()),
-        genesis,
-        Collections.emptyMap(),
-        pruningOptions);
+    final SafeFuture<UpdatableStore> result =
+        Store.create(
+            SYNC_RUNNER,
+            new StubMetricsSystem(),
+            blockProviderFromChainBuilder(),
+            StateAndBlockProvider.NOOP,
+            genesis.getState().getGenesis_time(),
+            genesis.getState().getGenesis_time(),
+            genesisCheckpoint,
+            genesisCheckpoint,
+            genesisCheckpoint,
+            Map.of(genesis.getRoot(), genesis.getParentRoot()),
+            Map.of(genesis.getRoot(), genesis.getSlot()),
+            genesis,
+            Collections.emptyMap(),
+            pruningOptions);
+
+    assertThat(result).isCompleted();
+    return result.join();
   }
 
   protected BlockProvider blockProviderFromChainBuilder() {
@@ -134,23 +152,5 @@ public abstract class AbstractStoreTest {
                 .map(chainBuilder::getBlock)
                 .flatMap(Optional::stream)
                 .collect(Collectors.toMap(SignedBeaconBlock::getRoot, Function.identity())));
-  }
-
-  static class CheckpointState {
-    private final Checkpoint checkpoint;
-    private final BeaconState state;
-
-    private CheckpointState(Checkpoint checkpoint, BeaconState state) {
-      this.checkpoint = checkpoint;
-      this.state = state;
-    }
-
-    public Checkpoint getCheckpoint() {
-      return checkpoint;
-    }
-
-    public BeaconState getState() {
-      return state;
-    }
   }
 }
